# transient-stack

./: .devcontainer.json  .gitignore  AGENTS.md  GEMINI.md  README.md  cabal.project  cabal.project.local  hie.yaml  notes.md  patents.md  socraticgemini.md
.devcontainer/: Dockerfile  devcontainer.json
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
axiom/src/GHCJS/HPlay/: Cell.hs  View.hs  View.newmonad.hs  View.newmonadrender.hs  View.noid.hs  View.nomonad.hs  View.render.hs
axiom/src/GHCJS/HPlay/View.experiments/: View.newmonad.hs  View.newmonadrender.hs  View.noid.hs  View.nomonad.hs  View.render.hs
axiom/tests/: test.hs  testm.hs  todo.hs  widgets.hs
docs/: # The Evolution of Software Composition-professional.md  The Evolution of Software Composition divulgative version.md  atoms-conversation.md  atoms-of-computing.md  ivory tower.md  transient-cheatsheet-advanced.md  transient-cheatsheet.md  transient-cheatsheet1.md  transient-faq-for-skeptics.md  transient-philosophy-and-parallels.md  transient-synthesis.md
transient/: .gitignore  README.md  transient.cabal  tutorial.md
transient-universe/: .ghc.environment.x86_64-linux-9.2.7  .gitignore  move.md  transient-universe.cabal  transient-universe.cabal.new
transient-universe-tls/: .gitignore  LICENSE  README.md  transient-universe-tls.cabal
transient-universe-tls/src/Transient/: TLS.hs
transient-universe-tls/tests/: DistrbDataSets.hs  Test2.hs  api.hs  certificate.csr  distributedApps.hs
transient-universe/app/server/Transient/Move/Services/: MonitorService.hs  MonitorService.last.hs  controlServices.hs  executor.hs
transient-universe/src/Transient/: MapReduce.hs  Move.hs
transient-universe/src/Transient/Move/: Defs.hs  IPFS.hs  Internals.comcont.hs  Internals.hs  Internals.localclosures.hs  JSON.hs  Job.hs  Logged.hs  PubSub.hs  Services.hs  Utils.hs  Web.hs  WebHTML.hs
transient-universe/src/Transient/Move/Services/: Executor.hs
transient-universe/tests/: .ghc.environment.x86_64-linux-9.2.5  .ghc.environment.x86_64-linux-9.2.7  Parameters.hs  Test.hs  TestSuite.hs  api.hs  builder.hs  cardano.hs  cell.hs  cert.pem  flow.hs  generator.hs  hasrocket.prof  https.hs  key.pem  language.hs  newmonad.hs  newmonad2.hs  newmonad3.hs  raft.hs  spa.html  test.sh  test5.hs  testRestService.hs  testService.hs  testfreer.hs  testlogged.hs
transient-universe/tests/job/: Job.hs
transient/src/Transient/: Backtrack.hs  Base.hs  Console.hs  EVars.hs  Indeterminism.hs  Internals.hs  JSON.hs  Loggable.hs  Logged.hs  Logged.remove.hs  Mailboxes.hs  Parse.hs
transient/tests/: .ghc.environment.x86_64-linux-9.2.5  Test.hs  TestSuite.hs  test5.hs
