name: transient-universe-tls
description: Secure communications for transient
version: 0.3.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
maintainer: agocorona@gmail.com
homepage: http://github.com/transient-haskell/transient-universe-tls
synopsis: transient with secure communications
category: Network
author: Alberto G. Corona
extra-source-files:
    ChangeLog.md, README.md

source-repository head
    type: git
    location: http://github.com/transient-haskell/transient-universe-tls


library
 
    default-language: Haskell2010
    hs-source-dirs: src
    exposed-modules:
           Transient.TLS
    if !impl(ghcjs >=0.1)
        build-depends:
            base >=4.8 && <5.9, tls, cprng-aes, transient , transient-universe >= 0.6.0.0,
            bytestring, data-default, network, x509-store, x509-system, mtl, directory
    if impl(ghcjs >=0.1)
        build-depends:
            base >=4.8
