name: transient-universe
version: 0.7.0.4
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
maintainer: agocorona@gmail.com
homepage: https://github.com/transient-haskell/transient-universe
bug-reports: https://github.com/transient-haskell/transient-universe/issues
synopsis: fully composable remote execution for the creation of distributed systems
description: fully composable remote execution for the creation of distributed systems across Web clients and servers using sockets, websockets and HTTP. Web API compatible, map-reduce implementation.
    See <http://github.com/transient-haskell/transient-stack/transient-universe>.
category: Control, Distributed Computing
author: Alberto G. Corona
extra-source-files:
    ChangeLog.md README.md
    app/client/Transient/Move/Services/void.hs
    app/server/Transient/Move/Services/MonitorService.hs
        app/server/Transient/Move/Services/executor.hs

source-repository head
    type: git
    location: https://github.com/transient-haskell/transient-universe

library
    
    if !impl(ghcjs >=0.1)
        exposed-modules:
            -- Transient.Move.Services.Executor

    if impl(ghcjs >=0.1)
        build-depends:
            -- ghcjs-base should be installed with
            -- > git clone https://github.com/ghcjs/ghcjs-base
            -- > cd ghcjs-base
            -- > cabal install --ghcjs --constraint 'primitive < 0.6.4'
            ghcjs-base -any,
            ghcjs-prim -any,
            random -any
    else
        build-depends:
            base64-bytestring,
            HTTP -any,
            mime-types,
            TCache >= 0.12,
            case-insensitive -any,
            directory -any,
            filepath -any,
            hashable -any,
            iproute -any,
            network >= 3.0,
            network-info -any,
            network-uri -any,
            vector -any,
            websockets >=  0.12.7.1 ,
            process -any,
            random -any,
            text -any,
            aeson -any,
            data-default,
            syb,
            hashable
            --primitive < 0.6.4.0
            -- entropy <= 0.3.6, 
    build-depends:
            old-time
            


    exposed-modules:
        Transient.Move
        Transient.MapReduce
        Transient.Move.Internals
        Transient.Move.Utils
        Transient.Move.Web
        Transient.Move.Services
        Transient.Move.IPFS
        Transient.Move.Job
        -- Transient.Move.PubSub
    build-depends:
        base >4 && <5,
        bytestring -any,
        containers,
        mtl -any,
        stm -any,
        time -any,
        transformers -any,
        transient >= 0.9.0.0
    default-language: Haskell2010
    hs-source-dirs: src .
    ghc-options:  -w -O0 

executable monitorService

    if !impl(ghcjs >=0.1)
        build-depends:
            transformers -any,
            containers,
            transient >= 0.9.0.0,
            transient-universe,
            process,
            directory,
            bytestring
            
        hs-source-dirs: app/server/Transient/Move/Services
        main-is: MonitorService.hs
    else
        hs-source-dirs: app/client/Transient/Move/Services
        main-is: void.hs
    build-depends:
        base >4 && <5


    default-language: Haskell2010
    ghc-options: -w  -O0 
    

-- executable executor
--     if !impl(ghcjs >=0.1)
--         build-depends:
--             containers,
--             transformers -any,
--             transient >= 0.9.0.0,
--             transient-universe,
--             process >= 1.6.4.0,
--             directory,
--             bytestring, 
--             aeson,
--             time
            
--         hs-source-dirs: app/server/Transient/Move/Services
--         main-is: executor.hs
--     else
--         hs-source-dirs: app/client/Transient/Move/Services
--         main-is: void.hs
--     build-depends:
--         base >4 && <5


--     default-language: Haskell2010
--     ghc-options:  -threaded -rtsopts

-- executable controlServices
--     if !impl(ghcjs >=0.1)
--         build-depends:
--             containers,
--             transformers -any,
--             transient >= 0.8.0.0,
--             transient-universe,
--             process >= 1.6.4.0,
--             directory,
--             bytestring, 
--             aeson,
--             time
            
--         hs-source-dirs: app/server/Transient/Move/Services
--         main-is: controlServices.hs
--     else
--         hs-source-dirs: app/client/Transient/Move/Services
--         main-is: void.hs
--     build-depends:
--         base >4 && <5


--     default-language: Haskell2010
--     ghc-options:  -threaded -rtsopts

executable test-transient1

    if !impl(ghcjs >=0.1)
        build-depends:
            mtl -any,
            transient >= 0.9.0.0,
            random -any,
            text -any,
            containers -any,
            directory -any,
            filepath -any,
            stm -any,
            base64-bytestring,
            HTTP -any,
            mime-types,
            network >= 3.0,
            transformers -any,
            process -any,
            network-info -any,
            bytestring -any,
            time -any,
            vector -any,
            TCache >= 0.12,
            websockets >=  0.12.7.1 ,
            network-uri -any,
            case-insensitive -any,
            hashable -any,
            aeson,
            old-time,
            data-default
            
            
            
    main-is: TestSuite.hs
    build-depends:
        base >4
    default-language: Haskell2010
    hs-source-dirs: tests src .
    ghc-options: -w -O0 


test-suite test-transient

    if !impl(ghcjs >=0.1)
        build-depends:
            mtl -any,
            transient >= 0.9.0.0,
            random -any,
            text -any,
            containers -any,
            directory -any,
            filepath -any,
            stm -any,
            base64-bytestring,
            HTTP -any,
            mime-types,
            network >= 3.0,
            transformers -any,
            process -any,
            network-info -any,
            bytestring -any,
            time -any,
            vector -any,
            TCache >= 0.12,
            websockets >= 0.12.7.1 ,
            network-uri -any,
            case-insensitive -any,
            hashable -any,
            aeson,
            old-time,
            data-default

    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base >4
    default-language: Haskell2010
    hs-source-dirs: tests src .
    ghc-options: -w -O0

-- executable test5
--         build-depends:
--             containers,
--             transformers -any,
--             transient >= 0.8.0.0,
--             transient-universe,
--             process >= 1.6.4.0,
--             directory,
--             bytestring, 
--             aeson,
--             time,
--             mtl,
--             vector,
--             TCache,
--             data-default,
--             syb,
--             random
            
--         hs-source-dirs: tests
--         main-is: test5.hs
    
--         build-depends:
--             base >4 && <5

-- executable flow
--         build-depends:
--             containers,
--             transformers -any,
--             transient >= 0.8.0.0,
--             transient-universe,
--             process >= 1.6.4.0,
--             directory,
--             bytestring, 
--             aeson,
--             time,
--             mtl,
--             vector,
--             TCache,
--             old-time,
--             syb,
--             data-default
            
            
--         hs-source-dirs: tests
--         main-is: flow.hs
    
--         build-depends:
--             base >4 && <5
--         ghc-options: -w -O0