name: transient
version: 0.9.0.2
author: Alberto G. Corona
extra-source-files:
    ChangeLog.md README.md
maintainer: agocorona@gmail.com
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
homepage: https://github.com/transient-haskell/transient
bug-reports: https://github.com/transient-haskell/transient/issues
synopsis: composing programs with multithreading, events and distributed computing
description: See <http://github.com/agocorona/transient>
             Distributed primitives are in the transient-universe package. Web primitives are in the axiom package.
category: Control, Concurrency


flag debug
  description:  Enable debugging outputs
  default:      False
  manual:       True

library
--    if impl(ghcjs >=0.1)
--        build-depends:
--            ghcjs-base -any


    build-depends:      base            >= 4.8.0  
                        , containers    >= 0.5.6
                        , transformers  >= 0.4.2
                        , time          >= 1.5
                        , directory     >= 1.2.2
                        , bytestring    >= 0.10.6
                        , text


                     -- libraries not bundled w/ GHC
                     , mtl
                     , stm
                     , random
                     , vector
                     , TCache
                     , signal


    exposed-modules: Transient.Backtrack
                     Transient.Base
                     Transient.EVars
                     Transient.Mailboxes
                     Transient.Indeterminism
                     Transient.Internals
                     Transient.Parse
                     Transient.Console
                     Transient.Loggable



    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src .
    ghc-options:   -O0 
    cpp-options: 

    if flag(debug)
       cpp-options: -DDEBUG

source-repository head
    type: git
    location: https://github.com/agocorona/transient-stack/transient

test-suite test-transient

    if !impl(ghcjs >=0.1)
        build-depends:
                       base          >= 4.8.1  &&  < 5
                     , containers    >= 0.5.6
                     , transformers  >= 0.4.2
                     , time          >= 1.5
                     , directory     >= 1.2.2
                     , bytestring    >= 0.10.6

                     -- libraries not bundled w/ GHC
                     , transient == 0.9.0.2
                     , mtl
                     , stm
                     , random
                     , vector
                     , TCache
                     , signal



    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base >4
    default-language: Haskell2010
    hs-source-dirs: tests src .
    ghc-options:  -O0 

executable test-transient1

    if !impl(ghcjs >=0.1)
        build-depends:
                       base          >= 4.8.1  &&  < 5
                     , containers    >= 0.5.6
                     , transformers  >= 0.4.2
                     , time          >= 1.5
                     , directory     >= 1.2.2
                     , bytestring    >= 0.10.6

                     -- libraries not bundled w/ GHC
                     , transient
                     , mtl
                     , stm
                     , random
                     , vector
                     , TCache
                     ,  signal



    main-is: TestSuite.hs
    build-depends:
        base >4
    default-language: Haskell2010
    hs-source-dirs: tests src .
    -- ghc-options: -prof -fprof-auto -rtsopts -with-rtsopts=-p